# Laifu.OpenCV

./: .gitignore  .gitmodules  README.md  cv.sln  nuget.config
cpp/: CMakeLists.txt  build.bat  demo.cpp  dump.bat  main.cpp  models.cpp  motion.cpp  old.cpp  stitching.cpp
cpp/MicroscopeStitcher/: README.md
cpp/includes/: array.hpp  common.hpp  core.hpp  features2d.hpp  gui.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  mat.hpp  mat_expr.hpp  std.hpp  stitching.hpp  test.hpp  umat.hpp
cpp/includes/core/: inputarray.hpp  inputoutputarray.hpp  mat.hpp  matexpr.hpp  outputarray.hpp  umat.hpp
cpp/includes/features2d/: orb.hpp  sift.hpp  surf.hpp
cpp/includes/stitching_detail/: matchers.hpp
cpp/models/: README.md  microscope_stitching.hpp
cpp/modules/MicroscopeStitcher/: CMakeLists.txt  README.md
cpp/modules/MicroscopeStitcher/includes/: common.hpp  context.hpp  stitcher.hpp
cpp/modules/MicroscopeStitcher/src/: stitcher.cpp
cpp/old/: array.hpp  core.hpp  features2d.hpp  imgcodecs.hpp  mat.hpp  stitching.hpp  xfeatures2d.hpp
cpp/src/: all.cpp  core.cpp  std.cpp
cs/: cs.sln
cs/Demo/: Demo.csproj  Program.cs
cs/Laifu.OpenCv/: Demo.cs  DisposableObject.cs  GlobalUsing.cs  Laifu.OpenCv.csproj  OpenCvException.cs  Test.cs
cs/Laifu.OpenCv.Benchmark/: Laifu.OpenCv.Benchmark.csproj  Program.cs
cs/Laifu.OpenCv.External.Build/: Laifu.OpenCv.External.Build.vcxproj  Laifu.OpenCv.External.Build.vcxproj.filters  main.cpp  main.hpp
cs/Laifu.OpenCv.External.Share/: Laifu.OpenCv.External.Share.vcxitems  Laifu.OpenCv.External.Share.vcxitems.DotSettings
cs/Laifu.OpenCv/Constants/: ExceptionStatus.cs
cs/Laifu.OpenCv/Cv2/: Cv2.HighGui.cs  Cv2.ImageCodecs.cs  Cv2.ImageProc.cs  ImageCodecs.cs
cs/Laifu.OpenCv/Handles/: CoreHandle.cs  InputArrayHandle.cs  InputOutputArrayHandle.cs  MatExprHandle.cs  MatHandle.cs  OutputArrayHandle.cs  SafePtrHandle.cs  StringHandle.cs  UMatHandle.cs  VectorOfKeyPoint.cs
cs/Laifu.OpenCv/Interfaces/: IInputArray.cs
cs/Laifu.OpenCv/Models/: DisposableObject.cs  InputArray.cs  InputOutputArray.cs  Mat.cs  MatExpr.cs  OutputArray.cs  UMat.cs
cs/Laifu.OpenCv/Native/: Helper.cs  SafeHandle.cs
cs/Laifu.OpenCv/PInvoke/: Constants.cs  Core.cs  ExceptionStatus.cs  Mat.cs  NativeMethods.Array.cs  NativeMethods.Expr.cs  NativeMethods.Features2d.cs  NativeMethods.HighGui.cs  NativeMethods.ImageCodecs.cs  NativeMethods.ImageProc.cs  NativeMethods.Mat.cs  NativeMethods.Std.cs  NativeMethods.UMat.cs  NativeMethods.XFeatures2d.cs  NativeMethods.cs  Std.cs  StdString.cs
cs/Laifu.Stitching.Core/: Laifu.Stitching.Core.csproj
cs/Laifu.Stitching.Core/Estimator/: AffineBasedEstimator.cs  BundleAdjusterAffinePartial.cs  BundleAdjusterRay.cs  BundleAdjusterReproj.cs  CameraParams.cs  EstimatorExtension.cs  EstimatorHelper.cs  HomographyBasedEstimator.cs  NoBundleAdjuster.cs  VectorOfCameraParams.cs
cs/Laifu.Stitching.Core/Finder/: Akaze.cs  FinderHelper.cs  ImageFeatures.cs  Orb.cs  Sift.cs  Surf.cs  VectorOfImageFeatures.cs
cs/Laifu.Stitching.Core/Matcher/: AffineBestOf2NearestMatcher.cs  BestOf2NearestMatcher.cs  BestOf2NearestRangeMatcher.cs  MatcherHelper.cs  MatchesInfo.cs  VectorOfDMatch.cs  VectorOfMatchInfo.cs  VectorOfUChar.cs
cs/Laifu.Stitching.Core/Models/: CvType.cs
cs/Laifu.Stitching.Core/Others/: VectorOfInt.cs
cs/Laifu.Stitching.Core/Services/: IAdjusterService.cs  IEstimatorService.cs  IFinderService.cs  IMatcherService.cs  (+2 more)
cs/Laifu.Stitching.Wpf/: App.xaml  App.xaml.cs  Laifu.Stitching.Wpf.csproj  MainWindow.xaml  MainWindow.xaml.cs
docs/Automatic Panoramic Image Stitching using Invariant Features/: README.md
test/TestDllCSharp/: PInvoke.cs  Program.cs  TestDllCSharp.csproj
(+103 files in other folders)
